Add Discord icon

--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,8 @@ social-links:
   reddit: 
   facebook: trustwalletapp
   twitter: trustwalletapp
-  pinterest:
-  instagram:
   email: support@trustwalletapp.com
+  discord: kUXyamd
   youtube: # channel/<your_long_string> or <user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
