Add youtube to social

--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,7 @@ social-links:
   twitter: trustwalletapp
   email: support@trustwalletapp.com
   discord: kUXyamd
-  youtube: # channel/<your_long_string> or <user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
+  youtube: channel/UCrYnRK55nYUDd6flEZ2Kf6g/videos
 
 # Enable/Disable Features & Page Elements
 enable:
