--- a/_config.yml
+++ b/_config.yml
@@ -57,8 +57,8 @@ download_button_background_color: "#0191FF" # Optional
 download_button_text_color: white; # Optional
 
 # Site Info - specific meta
-title: Trust - Ethereum Wallet # Optional - Enter your site title
-description: Trust - Secure wallet for Ethereum, ERC20 and ERC223 tokens. # Optional - Enter your site description
+title: Trust - Ethereum Wallet
+description: Trust - Secure wallet for Ethereum, ERC20 and ERC223 tokens.
 
 # Google Analytics
 google_analytics: UA-107603827-1 # Enter your tracking code (e.g. UA-2110908-2) to activate tracking
